--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Stylish Portfolio - Start Bootstrap Template</title>
+    <title>Kraatz - Developer</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +29,7 @@
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand">
-                <a href="#top" onclick=$( "#menu-close").click();>Start Bootstrap</a>
+                <a href="#top" onclick=$( "#menu-close").click();>Matt Kraatz</a>
             </li>
             <li>
                 <a href="#top" onclick=$( "#menu-close").click();>Home</a>
@@ -52,8 +52,8 @@
     <!-- Header -->
     <header class="header" id="top">
         <div class="text-vertical-center">
-            <h1>Start Bootstrap</h1>
-            <h3>Free Bootstrap Themes &amp; Templates</h3>
+            <h1 class="header-text">Matt Kraatz</h1>
+            <h3 class="header-text">Full Stack Developer</h3>
             <br>
             <a href="#about" class="page-scroll btn btn-dark btn-lg">Find Out More</a>
         </div>
@@ -62,10 +62,11 @@
     <!-- About -->
     <section id="about" class="about">
         <div class="container text-center">
-            <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
-            <p class="lead">This theme features some wonderful photography courtesy of <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a>.</p>
+            <h2>Development is about process and creativity</h2>
+            <p class="lead">A problem-solver at heart, I'm passionate about building solutions that empower users to accomplish more with their strengths.</p>
+            <p class="lead">Currently, I'm building with .NET and AngularJS for <a href="http://apexrevtech.com" target="_blank">Apex Revenue Technologies</a>, and working on <a href="https://GameNightBuddy.com" target="_blank">Game Night Buddy</a> whenever I find time.</p>
+            <p class="lead">I'm a music enthusiast (all genres) and call Nashville home.</p>
         </div>
-        <!-- /.container -->
     </section>
 
     <!-- Services -->
