--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
             <h1 class="header-text">Matt Kraatz</h1>
             <h3 class="header-text">Full Stack Developer</h3>
             <br>
-            <a href="#about" class="page-scroll btn btn-dark btn-lg">Find Out More</a>
+            <a href="#about" class="page-scroll btn btn-dark btn-lg">Tell Me More</a>
         </div>
     </header>
 
     <!-- About -->
     <section id="about" class="about">
         <div class="container text-center">
-            <h2>Development is about process and creativity</h2>
+            <h2>Development is about process and creativity.</h2>
             <p class="lead">A problem-solver at heart, I'm passionate about building solutions that empower users to accomplish more with their strengths.</p>
             <p class="lead">Currently, I'm building with .NET and AngularJS for <a href="http://apexrevtech.com" target="_blank">Apex Revenue Technologies</a>, and working on <a href="https://GameNightBuddy.com" target="_blank">Game Night Buddy</a> whenever I find time.</p>
             <p class="lead">I'm a music enthusiast (all genres) and call Nashville home.</p>
@@ -75,84 +75,76 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-lg-10 mx-auto">
-                    <h2>Our Services</h2>
+                    <h2>Technologies</h2>
                     <hr class="small">
                     <div class="row">
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-cloud fa-stack-1x text-primary"></i>
+                                <img src="img/Angular.svg" class="tech-logo"/>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Angular</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <p>Angular, TypeScript, ngrx, Router, AngularJS</p>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-compass fa-stack-1x text-primary"></i>
+                                <img src="img/dotnet.png" class="tech-logo"/>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>.NET</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <p>.NET Core, .NET 4+, ASP.NET MVC and Web API, Entity Framework</p>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-flask fa-stack-1x text-primary"></i>
+                                <img src="img/xamarin.png" class="tech-logo"/>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Xamarin</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <p>Xamarin Forms, targeting iOS and Android</p>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-shield fa-stack-1x text-primary"></i>
+                                <img src="img/azure.png" class="tech-logo"/>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Azure</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <p>App Services, SQL Databases</p>
                             </div>
                         </div>
                     </div>
-                    <!-- /.row (nested) -->
                 </div>
-                <!-- /.col-lg-10 -->
             </div>
-            <!-- /.row -->
         </div>
-        <!-- /.container -->
     </section>
 
     <!-- Callout -->
-    <aside class="callout">
+    <!-- <aside class="callout">
         <div class="text-vertical-center">
             <h1>Vertically Centered Text</h1>
         </div>
-    </aside>
+    </aside> -->
 
     <!-- Portfolio -->
     <section id="portfolio" class="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 mx-auto text-center">
-                    <h2>Our Work</h2>
+                    <h2>My Work</h2>
                     <hr class="small">
                     <div class="row">
                         <div class="col-md-6">
@@ -184,14 +176,10 @@
                             </div>
                         </div>
                     </div>
-                    <!-- /.row (nested) -->
-                    <a href="#" class="btn btn-dark">View More Items</a>
+                    <a href="https://github.com/mattkraatz" target="_blank" class="btn btn-dark">View More on GitHub</a>
                 </div>
-                <!-- /.col-lg-10 -->
             </div>
-            <!-- /.row -->
         </div>
-        <!-- /.container -->
     </section>
 
     <!-- Call to Action -->
@@ -203,29 +191,18 @@
         </div>
     </aside>
 
-    <!-- Map -->
-    <section id="contact" class="map">
-        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
-        <br />
-        <small>
-            <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>
-        </small>
-    </section>
-
     <!-- Footer -->
     <footer>
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 mx-auto text-center">
-                    <h4><strong>Start Bootstrap</strong>
-                    </h4>
-                    <p>3481 Melrose Place
-                        <br>Beverly Hills, CA 90210</p>
-                    <ul class="list-unstyled">
+                    <h4><strong>Matt Kraatz</strong></h4>
+                    <p>Nashville, TN</p>
+                    <!-- <ul class="list-unstyled">
                         <li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li>
                         <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:name@example.com">name@example.com</a>
                         </li>
-                    </ul>
+                    </ul> -->
                     <br>
                     <ul class="list-inline">
                         <li class="list-inline-item">
@@ -239,7 +216,7 @@
                         </li>
                     </ul>
                     <hr class="small">
-                    <p class="text-muted">Copyright &copy; Your Website 2017</p>
+                    <p class="text-muted">Copyright &copy; Matt Kraatz 2017</p>
                 </div>
             </div>
         </div>
